fix(storefront-components/quantity-selector): repair quantity selector broken styles

--- a/@ecomplus/storefront-template/template/scss/themes/ecom-beauty/_product.scss
+++ b/@ecomplus/storefront-template/template/scss/themes/ecom-beauty/_product.scss
@@ -104,7 +104,7 @@ main {
         }
       }
 
-      .quantity-selector {
+      .quantity-selector {        
         &__btn-container {
           height: 44px;
           width: 135px;
@@ -112,10 +112,24 @@ main {
           justify-content: center;
           border: 1px solid #C8C8C8;
           border-radius: 4px;
+
+          button {
+            padding: var(--spacer-2) var(--spacer-1);
+          }
+
+          @media (max-width: 575.98px) {
+            display: none;
+          }
         }
 
         &__input {
           border: none;
+        }
+
+        &__label {
+          @media (max-width: 575.98px) {
+            width: 100%;
+          }
         }
       }
 
@@ -137,6 +151,14 @@ main {
 
       .i-chevron-down::before {
         content: '-';
+      }
+    }
+
+    .quantity-selector__buy {
+      button {
+        @media (max-width: 575.98px) {
+          width: 100%;
+        }
       }
     }
 
